<resources>
    <string name="app_name">Baking App</string>
    <string name="recipes">Recipes</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="step_details">Step Details</string>
    <string name="quantity">Quantity</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
